# peerdas-custody

./: Cargo.toml  README.md  index.html
.github/workflows/: wasm-pack.yml
pkg/: README.md  package.json  peerdas_custody.d.ts  peerdas_custody.js  peerdas_custody_bg.wasm  peerdas_custody_bg.wasm.d.ts
src/: lib.rs  node_id.rs
